src/test/resources/semantic/custom/reject/indexUndefinedArray.ul
void main() {
}

void foo() {
    foo[5];
}
